gapi fix

--- a/wad_project/static/css/style.css
+++ b/wad_project/static/css/style.css
@@ -35,6 +35,8 @@
 
 .header {
     padding: 20px;
+    display: flex;
+    align-items: center;
 }
 
 .content {
